(library
 (name bonsai_web_test_of_bonsai_itself)
 (public_name bonsai_web_test.of_bonsai_itself)
 (libraries textutils.ascii_table_kernel bonsai_web bonsai_web_test
   bonsai.introspection_protocol bonsai_test.shared_for_testing_bonsai
   async_js.async_test core
   polling_state_rpc.diffable_polling_state_rpc_response legacy_diffable
   expect_test_helpers_core patdiff.expect_test_patdiff expectable
   bonsai_test incr_map async_rpc_kernel bonsai_web_test_async async_durable
   async_js async_kernel babel bonsai
   expect_test_helpers_core.expect_test_helpers_base incremental js_of_ocaml
   async_kernel.persistent_connection_kernel polling_state_rpc re streamable
   incr_dom.ui_incr versioned_polling_state_rpc virtual_dom)
 (preprocess
  (pps ppx_jane ppx_pattern_bind bonsai.ppx_bonsai js_of_ocaml-ppx
    ppx_diff.ppx_diff streamable.ppx)))
